<resources>
    <string name="about">About</string>
    <string name="accessibility_both">Both basic and plus service are enabled, this will cause conflict, please disable one.</string>
    <string name="accessibility_error">An service error is detected, which maybe caused by the application being cleaned up abnormally, please refer to the instructions for keeping the background in the help.</string>
    <string name="accessibility_need_plus">%1$s requires the plus service. You need to manually disable the basic service in the Android settings and then enable the plus service.</string>
    <string name="accessibility_permission">Accessiblity Permission</string>
    <string name="accessibility_switch">You can goto system setting to change service type.</string>
    <string name="accessibility_tip">Please enable Shaheer Motion here(Basic or Plus service).</string>
    <string name="acknowledgement">Acknowledgement</string>
    <string name="action">Action</string>
    <string name="action_0">None</string>
    <string name="action_1">Back</string>
    <string name="action_2">Home</string>
    <string name="action_3">Recent Tasks</string>
    <string name="action_4">Notification</string>
    <string name="action_5">Quick Settings</string>
    <string name="action_6">Last Task</string>
    <string name="action_6_tip">Achieved by sending the multitasking key twice, the delay between the keys can be configured in the lab.</string>
    <string name="action_7">Power Dialog</string>
    <string name="action_8">Voice Assistant</string>
    <string name="action_9">Split Screen</string>
    <string name="action_A">Screen rotation auto</string>
    <string name="action_B">Screen rotation</string>
    <string name="action_C">Notification toggle</string>
    <string name="action_D">Wifi</string>
    <string name="action_D_tip">Wifi cannot be toggled directly on Android 10+</string>
    <string name="action_E">Bluetooth</string>
    <string name="action_F">Torch</string>
    <string name="action_G">Scroll up</string>
    <string name="action_G_tip">Scrolling by directly adjusting the scroll bar.</string>
    <string name="action_H">Scroll down</string>
    <string name="action_I">Left-handed mode</string>
    <string name="action_I_tip">The one-handed mode of some phones will cause some functions of the Shaheer Motion to fail (volumn triggering, simulated gestures, etc.), use it carefully.</string>
    <string name="action_J">Ringer mode</string>
    <string name="action_J_tip">Switch between normal, silent and vibration</string>
    <string name="action_K">Force portrait</string>
    <string name="action_L">NFC</string>
    <string name="action_M">Right-handed mode</string>
    <string name="action_N">Screen swipe</string>
    <string name="action_N_tip">Record an arbitrary screen click, long press or swipe gesture.</string>
    <string name="action_O">Internet control panel</string>
    <string name="action_P">Wechat pay code</string>
    <string name="action_Q">Keep screen on</string>
    <string name="action_R">Touch protector</string>
    <string name="action_R_tip">Some system gestures cannot be disabled.</string>
    <string name="action_S">Volume adjust</string>
    <string name="action_T">Multi touch</string>
    <string name="action_T_tip">Record an Multi touch gesture</string>
    <string name="action_U">Location</string>
    <string name="action_V">Input</string>
    <string name="action_V_tip">Append text at the current editor</string>
    <string name="action_W">Send notication</string>
    <string name="action_Y">Play audio</string>
    <string name="action_Y_tip">Default is ringtone for notification</string>
    <string name="action_a">Media play/pause</string>
    <string name="action_b">Alipay scan QR</string>
    <string name="action_c">Alipay pay code</string>
    <string name="action_d">Wechat scan QR</string>
    <string name="action_e">Screen shot</string>
    <string name="action_edit">Modify the label and code of the action.</string>
    <string name="action_f">Popup panel</string>
    <string name="action_f_tip">Apps in the panel can trigger a small window by long pressing.</string>
    <string name="action_g">Swipe up</string>
    <string name="action_h">Swipe down</string>
    <string name="action_i">Swipe left</string>
    <string name="action_j">Swipe right</string>
    <string name="action_k">click context</string>
    <string name="action_k_tip">Click notification when notified</string>
    <string name="action_l">Lock screen</string>
    <string name="action_m">Fly Mouse</string>
    <string name="action_m1">Layout inspector</string>
    <string name="action_m2">Screen color picker</string>
    <string name="action_m_tip">Simulates a screen mouse for easy one-handed operation</string>
    <string name="action_n">Media next</string>
    <string name="action_o">Volume up</string>
    <string name="action_p">Pause gestures</string>
    <string name="action_p_tip">After paused, other gestures are invalid, and once triggered again, they can be recovered.</string>
    <string name="action_plugin">Code plugin</string>
    <string name="action_q">Volume down</string>
    <string name="action_r">Media prev</string>
    <string name="action_s">Stop gestures</string>
    <string name="action_s_tip">All gestures are disabled after stop and can only be restored via the ui or quick switch tile.</string>
    <string name="action_screen_click">Screen click</string>
    <string name="action_select_app">Launch App</string>
    <string name="action_select_more">More actions</string>
    <string name="action_select_plus_action">Actions require plus service</string>
    <string name="action_select_shortcut">App shortcut</string>
    <string name="action_select_shortcut_tip">Provided by third-party apps.</string>
    <string name="action_t">Force landscape</string>
    <string name="action_u">Volume panel</string>
    <string name="action_v">Screen brightness auto</string>
    <string name="action_w">Screen brightness up</string>
    <string name="action_x">Screen brightness down</string>
    <string name="action_y">Change input method</string>
    <string name="adb_tip">%1$s need adb authorize</string>
    <string name="app_icon">App icon</string>
    <string name="app_qq">Join the official QQ group</string>
    <string name="app_qq_tip">Download historical versions and communicate with developers, QQ group number 781012688.</string>
    <string name="battery_guard">Battery Guard</string>
    <string name="battery_guard_tip">Guards the device battery and extends the cycle life.</string>
    <string name="beautify_faces">Faces</string>
    <string name="beautify_faces_tip">Customizable quick tiles with seamless integration with Shaheer Motion.</string>
    <string name="bg_action_trigger">Why are some actions (such as scanning QR code) that can not be triggered when Shaheer Motion is in the background, but can be triggered in the foreground?</string>
    <string name="bg_action_trigger_tip">Some Android phones have permission to control the pop-up interface when the app is in the background. On these phones, you need to enable the corresponding permissions. For example, on the Xiaomi devices, you need to open the background pop-up permission of Shaheer Motion.</string>
    <string name="demo">Tutorial</string>
    <string name="demo_auto_input">Auto input demo</string>
    <string name="demo_auto_input_url">https://youtu.be/lNv4816i8RI</string>
    <string name="demo_hello">Demo video</string>
    <string name="demo_hello_url">https://youtu.be/3DjfUOnF8tw</string>
    <string name="demo_mouse">Fly mouse demo</string>
    <string name="demo_mouse_url">https://youtu.be/_rUyP9b5N78</string>
    <string name="demo_off_volumn">Volume button trigger under screen off</string>
    <string name="demo_off_volumn_url">https://youtu.be/I46bdoISnWY</string>
    <string name="demo_unidirectional">Unidirectional gesture demo</string>
    <string name="demo_unidirectional_url">https://youtu.be/om2FVZmEY_I</string>
    <string name="faq">FAQ</string>
    <string name="frag_memory">FragMemory</string>
    <string name="frag_memory_tip">FragMemory can study any anki library when using phone.</string>
    <string name="gesture_axis">Trigger mode</string>
    <string name="gesture_count">Repetitions</string>
    <string name="gesture_dir">Direction</string>
    <string name="gesture_key">Key pressed</string>
    <string name="gesture_max_count">Up to how many gestures can be created?</string>
    <string name="gesture_max_count_tip">You can add new gestures by Add button in the upper right corner. The gesture can have three axes of rotation, each axis can have positive and negative direction, and each direction can support single and double rotation, so a total of 12 independent gestures can be created.</string>
    <string name="home_action_delay">Why are there sometimes noticeable delays in triggering certain actions from home screen?</string>
    <string name="home_action_delay_tip">This is a design of Google in Android 10. In order to prevent users from being popped up by background app when they press home to return to the home, a five-second delay is forced. This restriction was removed on Android 12.</string>
    <string name="keep_background">How to keep the background of Shaheer Motion not being cleaned up?</string>
    <string name="keep_background_url">https://dontkillmyapp.com</string>
    <string name="key_mode">Key mode</string>
    <string name="miui_volume">Why the volume adjustment can not be popped up?</string>
    <string name="miui_volume_tip">Some devices such as Xiaomi need to set the [media volume control] permission to [always allow] first, otherwise it will cause the volume adjustment not to work.</string>
    <string name="other">Other</string>
    <string name="other_apps">Other apps</string>
    <string name="pay_action_count">You have used Shaheer Motion for %1$d days, executed %2$d times, Thanks for using.</string>
    <string name="pay_alipay">Source Code</string>
    <string name="pay_alipay_desc">"This app is 100% free and Open-Source Developed by Sanaullah Shaheer(Full Stack Developer)"</string>
    <string name="contact_text">"You can connect with me:
Email: sourcecode6727@gmail.com
Phone: +93777386727"</string>
    <string name="permission_obscured">An app is obscuring a permissions request, why?</string>
    <string name="permission_obscured_tip">This is because there is a floating window in the permission request page. Temporarily close the floating App and you can finish the permission request.</string>
    <string name="phone_probe">Phone Probe</string>
    <string name="phone_probe_tip">Explore the phone parameters, hardware test and benchmark.</string>
    <string name="policy_url">https://x1y9.com/public/gesture/privacy-en.html</string>
    <string name="privacy">Privacy</string>
    <string name="service_plus_warnning">Why do I have a warning about read credit card and password when I open the advanced accessibility service?</string>
    <string name="service_plus_warnning_tip">This is a template prompt for the Android Accessibility Service. As long as the button triggering feature is enabled, this prompt will be available. Shaheer Motion will never collect any personal information.</string>
    <string name="some_gestures_not_trig">Why some gestures are difficult to trigger?</string>
    <string name="some_gestures_not_trig_tip">There are two possibilities, one is the phone does not have a hardware gyroscope, in this case the sensor data given by the phone is not accurate enough to affect the recognition rate, if the gyroscope is no problem, please refer to the demo video to confirm whether the gesture action is accurate and consistent, most users can do a very accurate gesture recognition rate after a little learning.</string>
    <string name="thresh">Sensitivity</string>
    <string name="thresh_tip">Smaller is more sensitive</string>
</resources>